# AI-Powered-Market-Terminal-APEX

./: .gitignore  LICENSE  README.md  pyproject.toml
backend/: main.py
backend/services/: ai_service.py  news_service.py  signal_service.py  stock_service.py
frontend/: app.js  index.html
