[project]
name = "stock-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "feedparser>=6.0.12",
    "flask>=3.1.3",
    "git-filter-repo>=2.47.0",
    "ollama>=0.6.1",
    "openai>=2.26.0",
    "pandas>=3.0.1",
    "ta>=0.11.0",
    "uvicorn>=0.41.0",
    "yfinance>=1.2.0",
]
